switch term in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,7 +33,7 @@ bind + resize-pane -U 5
 # Reload key
 bind-key r source-file ~/.tmux.conf
 
-set -g default-terminal "screen"
+set -g default-terminal "xterm-256color"
 set -g history-limit 2000
 
 
