Fix Home/End in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,24 +1,14 @@
+# KEYS
+
 # Make it use C-a, similar to screen..
 unbind C-b
 unbind l
 set -g prefix C-a
 bind-key C-a last-window
 
-# Vi mode-key
-#set-option -g mode-keys vi
-
-# Mouse (use shift to deactivate)
-#set-window-option -g mode-mouse on
-#set-option -g mouse-select-pane on
-
-
 # Bind prev/next tab
 bind-key -n S-Right next-window
 bind-key -n S-Left previous-window
-
-# unbind C-Right/C-Left
-#unbind C-Right
-#unbind C-Left
 
 # Bind resize pane
 bind < resize-pane -L 5
@@ -27,17 +17,20 @@ bind - resize-pane -D 5
 bind + resize-pane -U 5
 
 # Bind Home/End keybind
-#bind-key -n Home start-of-line
-#bind-key -n End end-of-line
+bind-key -n Home send-keys C-a
+bind-key a send-keys C-a
+bind-key -n End send-keys C-e
+bind-key e send-keys C-e
 
 # Reload key
 bind-key r source-file ~/.tmux.conf
 
+# TERM
+
 set -g default-terminal "xterm-256color"
 set -g history-limit 2000
 
-
-#### COLOUR
+# COLOUR
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
@@ -70,6 +63,7 @@ set-option -g display-panes-colour colour168 #orange
 set-window-option -g clock-mode-colour colour64 #green
 
 # THEME
+
 #set -g status-bg black
 #set -g status-fg white
 set -g status-interval 60
