--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -105,7 +105,7 @@ font:
     # style: Italic
 
   # Point size
-  size: 16.0
+  size: 10.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -124,7 +124,7 @@ font:
   # screens and make reading text a little easier.
   # On X11 it is possible to change the DPI for each instance of alacritty by using
   # `WINIT_HIDPI_FACTOR=1.0 alacritty` to scale the font.
-  scale_with_dpi: false
+  scale_with_dpi: true
 
 # Display the time it takes to redraw each frame.
 render_timer: false
@@ -291,10 +291,10 @@ live_config_reload: true
 # You can set `shell.program` to the path of your favorite shell, e.g. `/bin/fish`.
 # Entries in `shell.args` are passed unmodified as arguments to the shell.
 #
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+shell:
+  program: /usr/bin/zsh
+  #args:
+    #- --login
 
 # Key bindings
 #
