--- a/i3/config
+++ b/i3/config
@@ -34,17 +34,16 @@ font pango:Droid Sans Mono for Powerline 10
 # Workspaces
 set $ws1 1:term
 set $ws2 2:www
-set $ws4 4:slack
-set $ws5 5:mail
+set $ws3 3:mumble
+set $ws6 6:slack
 
 workspace $ws1 output DP-1
 workspace $ws2 output DP-1
-workspace $ws4 output eDP-1
-workspace $ws5 output eDP-1
+workspace $ws3 output DP-1
+workspace $ws6 output eDP-1
 
 assign [class="Google-chrome"] $ws2
-assign [class="Slack"] $ws4
-assign [class="Thunderbird"] $ws5
+assign [class="Slack"] $ws6
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -117,10 +116,10 @@ bindsym $mod+q focus parent
 # switch to workspace
 bindsym $mod+ampersand workspace $ws1
 bindsym $mod+eacute workspace $ws2
-bindsym $mod+quotedbl workspace 3
-bindsym $mod+apostrophe workspace $ws4
-bindsym $mod+parenleft workspace $ws5
-bindsym $mod+minus workspace 6
+bindsym $mod+quotedbl workspace $ws3
+bindsym $mod+apostrophe workspace 4
+bindsym $mod+parenleft workspace 5
+bindsym $mod+minus workspace $ws6
 bindsym $mod+egrave workspace 7
 bindsym $mod+underscore workspace 8
 bindsym $mod+ccedilla workspace 9
@@ -133,10 +132,10 @@ bindsym $mod+Right workspace next
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+eacute move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace $ws6
 bindsym $mod+Shift+egrave move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+ccedilla move container to workspace 9
@@ -148,6 +147,13 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+# screen saver
+#bindsym $mod+XF86Explorer exec "gnome-screensaver-command --lock"
+
+# Brightness
+#bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+#bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -174,6 +180,7 @@ mode "resize" {
 }
 
 #bindsym $mod+r mode "resize"
+bindsym $mod+d mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -184,7 +191,7 @@ bar {
 # Start some applications
 exec --no-startup-id setxkbmap -config ~/.setxkbmaprc
 exec --no-startup-id xrdb -load ~/.Xdefaults
-exec --no-startup-id gnome-settings-daemon
+#exec --no-startup-id gnome-settings-daemon
 exec --no-startup-id clipit
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
