--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,3 +70,6 @@ set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
+
+# Shell
+set-option -g default-shell /usr/bin/zsh
