--- a/i3/config
+++ b/i3/config
@@ -57,6 +57,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec alacritty
 bindsym $mod+Return exec urxvt
+#bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+A kill
@@ -203,7 +204,8 @@ exec --no-startup-id setxkbmap -config ~/.setxkbmaprc
 exec --no-startup-id xrdb -load ~/.Xdefaults
 exec --no-startup-id gnome-settings-daemon
 #exec --no-startup-id clipit
-exec --no-startup-id xfce4-clipman
+#exec --no-startup-id xfce4-clipman
+exec --no-startup-id parcellite
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 #exec --no-startup-id xflux -l 47.2494910 -q -1.4873310
