enable multimedia keys in i3

--- a/i3/config
+++ b/i3/config
@@ -155,13 +155,24 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# screen saver
-#bindsym $mod+XF86Explorer exec "gnome-screensaver-command --lock"
-bindsym $mod+Shift+x exec "gnome-screensaver-command --lock"
+# Multimedia keys
 
-# Brightness
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 10
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+## Lock screen
+#bindsym $mod+XF86Explorer exec "gnome-screensaver-command --lock"
+#bindsym $mod+Shift+x exec "gnome-screensaver-command --lock"
+bindsym $mod+Escape exec i3lock -c 333333
+
+## Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
+bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@ +10% #increase micro volume
+bindsym $mod+XF86AudioLowerVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@ -10% #decrease micro volume
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle # mute micro
+
+## Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -210,7 +221,7 @@ exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 #exec --no-startup-id xflux -l 47.2494910 -q -1.4873310
 exec --no-startup-id gnome-screensaver
-exec --no-startup-id xrandr --output eDP-1 --mode 1600x900
+#exec --no-startup-id xrandr --output eDP-1 --mode 1600x900
 exec --no-startup-id flameshot
 
 # Keyboard mapping
