--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -77,5 +77,9 @@ set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)@#H#[default]'
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
+# ESC timeout for vim
+# https://www.reddit.com/r/neovim/comments/35h1g1/neovim_slow_to_respond_after_esc/
+set -sg escape-time 0
+
 # Shell
 set-option -g default-shell /usr/bin/zsh
