--- a/i3/config
+++ b/i3/config
@@ -36,6 +36,7 @@ set $ws1 1:term
 set $ws2 2:www
 set $ws5 5:slack
 set $ws6 6:chat
+set $ws7 7:settings
 
 #workspace $ws1 output DP-1
 #workspace $ws2 output DP-1
@@ -44,16 +45,18 @@ workspace $ws1 output HDMI-1
 workspace $ws2 output HDMI-1
 workspace $ws5 output eDP-1
 workspace $ws6 output eDP-1
+workspace $ws7 output eDP-1
 
 workspace_layout stacking
 
 assign [class="chrome"] $ws2
-assign [class="firefox"] $ws2
 assign [class="Firefox"] $ws2
 assign [class="Slack"] $ws5
 assign [class="Mumble"] $ws6
 assign [class="Telegram"] $ws6
 assign [class="discord"] $ws6
+assign [class="Gnome-control-center"] $ws7
+assign [class="Pavucontrol"] $ws7
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
