--- a/i3/config
+++ b/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:monospace 8
+#font pango:monospace 8
 font pango:Droid Sans Mono for Powerline 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -62,8 +62,6 @@ assign [class="Pavucontrol"] $ws7
 floating_modifier $mod
 
 # start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec alacritty
 bindsym $mod+Return exec urxvt
 #bindsym $mod+Return exec gnome-terminal
 
@@ -229,7 +227,8 @@ exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 #exec --no-startup-id xflux -l 47.2494910 -q -1.4873310
 exec --no-startup-id gnome-screensaver
-exec --no-startup-id xrandr --output eDP-1 --mode 1600x900
+exec --no-startup-id xrandr --output eDP-1 --mode 1680x1050
+#exec --no-startup-id xrandr --output eDP-1 --mode 1600x900
 #exec --no-startup-id xrandr --output eDP-1 --mode 2048x1152
 exec --no-startup-id flameshot
 
