--- a/i3/config
+++ b/i3/config
@@ -38,9 +38,6 @@ set $ws5 5:slack
 set $ws6 6:chat
 set $ws7 7:settings
 
-#workspace $ws1 output DP-1
-#workspace $ws2 output DP-1
-#workspace $ws3 output DP-1
 workspace $ws1 output HDMI-1
 workspace $ws2 output HDMI-1
 workspace $ws5 output eDP-1
@@ -62,8 +59,7 @@ assign [class="Pavucontrol"] $ws7
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
-#bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+A kill
@@ -164,8 +160,6 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # Multimedia keys
 
 ## Lock screen
-#bindsym $mod+XF86Explorer exec "gnome-screensaver-command --lock"
-#bindsym $mod+Shift+x exec "gnome-screensaver-command --lock"
 bindsym $mod+Escape exec i3lock -c 333333
 
 ## Pulse Audio controls
@@ -204,11 +198,7 @@ mode "resize" {
   bindsym Escape mode "default"
 }
 
-#bindsym $mod+r mode "resize"
 bindsym $mod+d mode "resize"
-
-# network-manager
-#bindsym $mod+w exec rxvt -e nmtui
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -220,16 +210,11 @@ bar {
 exec --no-startup-id setxkbmap -config ~/.setxkbmaprc
 exec --no-startup-id xrdb -load ~/.Xdefaults
 exec --no-startup-id gnome-settings-daemon
-#exec --no-startup-id clipit
-#exec --no-startup-id xfce4-clipman
 exec --no-startup-id parcellite
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 #exec --no-startup-id xflux -l 47.2494910 -q -1.4873310
-#exec --no-startup-id gnome-screensaver
 exec --no-startup-id xrandr --output eDP-1 --mode 1680x1050
-#exec --no-startup-id xrandr --output eDP-1 --mode 1600x900
-#exec --no-startup-id xrandr --output eDP-1 --mode 2048x1152
 exec --no-startup-id flameshot
 
 # Keyboard mapping
