--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,7 +27,8 @@ bind-key r source-file ~/.tmux.conf
 
 # TERM
 
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -g focus-events on
 set -g history-limit 2000
 
 # COLOUR
