feat: add some fonts and change kitten theme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,14 @@
 enable_audio_bell no
 
 
+# BEGIN_KITTY_FONTS
+font_family      family="CaskaydiaCove Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
+
+
 # BEGIN_KITTY_THEME
 # GitHub Dark Dimmed
 include current-theme.conf
