--- a/i3/config
+++ b/i3/config
@@ -38,6 +38,7 @@ set $ws2 2:www
 set $ws5 5:slack
 set $ws6 6:chat
 set $ws7 7:settings
+set $ws8 8:misc
 
 workspace $ws1 output HDMI-1
 workspace $ws2 output HDMI-1
