--- a/i3/config
+++ b/i3/config
@@ -98,6 +98,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+
 # split in horizontal orientation
 bindsym $mod+h split h
 
@@ -170,11 +171,15 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@ +10% #increase micro volume
 bindsym $mod+XF86AudioLowerVolume exec --no-startup-id pactl set-source-volume @DEFAULT_SOURCE@ -10% #decrease micro volume
+#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle # mute micro
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle # mute micro
 
 ## Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xcalib -c # brightness control reset screen (100% brightness)
 bindsym XF86MonBrightnessDown exec xcalib -co 95 -a # decrease screen brightness
+
+# Flameshot
+bindsym $mod+Print exec flameshot gui
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
