chore: many updates and tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,9 @@ unbind l
 set -g prefix C-a
 bind-key C-a last-window
 
+# Mouse
+set -g mouse on
+
 # Bind prev/next tab
 bind-key -n S-Right next-window
 bind-key -n S-Left previous-window
@@ -31,42 +34,25 @@ set-option -g default-terminal "tmux-256color"
 set-option -g focus-events on
 set -g history-limit 2000
 
-# COLOUR
+# COLORS
 
-# default statusbar colors
+# Selection
+set-window-option -g mode-style fg=red,bg=black,bold
+# Default statusbar colors
 set-option -g status-style bg=colour235,fg=colour136
-#set-option -g status-bg colour235 #base02
-#set-option -g status-fg colour136 #yellow
-#set-option -g status-attr default
-
-# default window title colors
+# Default window title colors
 set-window-option -g window-status-style fg=colour244,bg=default
-#set-window-option -g window-status-fg colour244
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
+# Active window title colors
 set-window-option -g window-status-current-style fg=colour166,bg=default
-#set-window-option -g window-status-current-fg colour166 #orange
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
+# Pane border
 set-option -g pane-border-style fg=colour235
-#set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-style fg=colour240
-#set-option -g pane-active-border-fg colour240 #base01
-
-# message text
+# Message text
 set-option -g message-style bg=colour235,fg=colour166
-#set-option -g message-bg colour235 #base02
-#set-option -g message-fg colour166 #orange
-
-# pane number display
+# Pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour168 #orange
-
-# clock
+# Clock
 set-window-option -g clock-mode-colour colour64 #green
 
 # THEME
